WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96343
[V8] We don't us the global handle map for anything useful---let's remove it
https://bugs.webkit.org/show_bug.cgi?id=96343
Summary
[V8] We don't us the global handle map for anything useful---let's remove it
Adam Barth
Reported
2012-09-10 17:44:56 PDT
[V8] We don't us the global handle map for anything useful---let's remove it
Attachments
Patch
(9.00 KB, patch)
2012-09-10 17:46 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2012-09-10 17:46:57 PDT
Created
attachment 163256
[details]
Patch
Kentaro Hara
Comment 2
2012-09-10 17:49:50 PDT
Comment on
attachment 163256
[details]
Patch LGTM
WebKit Review Bot
Comment 3
2012-09-10 18:21:56 PDT
Comment on
attachment 163256
[details]
Patch Clearing flags on attachment: 163256 Committed
r128138
: <
http://trac.webkit.org/changeset/128138
>
WebKit Review Bot
Comment 4
2012-09-10 18:21:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug