Source/WebCore/bindings/v8/V8GCController.h
@@ -35,54 +35,18 @@
 
 namespace WebCore {
 
-#ifndef NDEBUG
+class V8GCController {
+public:
+    static void gcPrologue();
+    static void gcEpilogue();
 
-#define GlobalHandleTypeList(V)   \
-    V(PROXY)                      \
-    V(NPOBJECT)                   \
-    V(SCHEDULED_ACTION)           \
-    V(EVENT_LISTENER)             \
-    V(NODE_FILTER)                \
-    V(SCRIPTINSTANCE)             \
-    V(SCRIPTVALUE)                \
-    V(DATASOURCE)
+    static void checkMemoryUsage();
+    static void hintForCollectGarbage();
+    static void collectGarbage();
 
-
-    // Host information of persistent handles.
-    enum GlobalHandleType {
-#define ENUM(name) name,
-        GlobalHandleTypeList(ENUM)
-#undef ENUM
-    };
-
-    class GlobalHandleInfo {
-    public:
-        GlobalHandleInfo(void* host, GlobalHandleType type) : m_host(host), m_type(type) { }
-        void* m_host;
-        GlobalHandleType m_type;
-    };
-
-#endif // NDEBUG
-
-    class V8GCController {
-    public:
-#ifndef NDEBUG
-        // For debugging and leak detection purpose.
-        static void registerGlobalHandle(GlobalHandleType, void*, v8::Persistent<v8::Value>);
-        static void unregisterGlobalHandle(void*, v8::Persistent<v8::Value>);
-#endif
-
-        static void gcPrologue();
-        static void gcEpilogue();
-
-        static void checkMemoryUsage();
-        static void hintForCollectGarbage();
-        static void collectGarbage();
-
-    private:
-        // Estimate of current working set.
-        static int workingSetEstimateMB;
-    };
+private:
+    static int workingSetEstimateMB;
+};
 
 }
 
